tests/baselines/reference/for-of35.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of35.ts(14,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of35.ts (1 errors) ====
    class StringIterator {
        next() {
            return {
                done: true,
                value: v
            }
        }
        
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.